# tayni

./: .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT-COMPILER-PURITY.md  BENCHMARK.md  BINARY_FORMAT.md  BINARY_OPTIMIZATION.md  BOOTSTRAP-PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSORTIUM-CRITICAL-REVIEW.md  CONSORTIUM-DESIGN-v0.4.md  CONSORTIUM-DESIGN.md  CONSORTIUM-LEARNING.md  CONSORTIUM-PURITY-DEBATE.md  CONSORTIUM-REVIEW-v0.4.md  CONSORTIUM-REVIEW-v0.7.md  CONSORTIUM-REVIEW-v0.8.md  CONSORTIUM-STRATEGIC-PLAN.md  CONSORTIUM-v0.12.md  CONTRIBUTING.md  Cargo.toml  LAUNCH-CHECKLIST.md  MANIFESTO-v0.2.md  MANIFESTO-v0.3.md  NELAIA_PROMPT.md  OPTIMIZATION_POTENTIAL.md  PERFORMANCE_ANALYSIS.md  PRINCIPLES.md  PROTOCOL.md  QUICKREF-v0.3.md  QUICKREF-v0.4.md  README.md  RELEASE-v0.4.1.md  RELEASE-v0.5.md  RELEASE-v0.6.md  RELEASE-v0.7.md  RELEASE-v0.8.md  ROADMAP.md  RUNTIME-ARCHITECTURE.md  (+34 more)
archive/rust-bootstrap/: -o  Cargo.toml  Hello from TAYNI!  Hola desde TAYNI HTTP Server!  README.md  arm64.rs  arm64_codegen.rs  binary.rs  capabilities.rs  conformance-report.json  dwarf.rs  elf.rs  elf_arm64.rs  emitter.rs  emitter_pure.rs  gpu.rs  http_client.rs  intent.rs  interface.rs  ir.rs  json.rs  lib.rs  macho.rs  main.rs  modules.rs  native_emitter.rs  parser.rs  pe_gen.rs  pkg.rs  qir.rs  riscv.rs  test-aes.tyn  test-args.tyn  test-argv.tyn  test-atomic.tyn  test-channel.tyn  test-cookie.tyn  test-cors.tyn  test-csv.tyn  test-cuda.ptx  (+78 more)
archive/rust-bootstrap/benchmarks/: $zigExe  BENCHMARK_RESULTS.md  c_http.c  count_tokens.py  go_http.go  (+5 more)
tools/lsp/: Cargo.toml
(+885 files in other folders)
