[package]
name = "tayni-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for TAYNI"
license = "MIT"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
